2005-10-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclClock.c:		Removed some dead code.
	* generic/tclCmdIL.c:
	* generic/tclCompCmds.c:
	* generic/tclDictObj.c:
	* generic/tclExecute.c:
	* generic/tclLiteral.c:
	* generic/tclParseExpr.c:
	* generic/tclScan.c:
	* generic/tclUtil.c:
	* generic/tclVar.c:

2005-10-19  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tclIORChan.c: General cleanup, removing checks that are
	unnecessary due to the general contracts of other functions in the
	core, converting to using ANSI declarations, etc. Note that nearly
	the whole file has changed, but it is often just cosmetic.

2005-10-19  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c (INST_DICT_APPEND, INST_DICT_LAPPEND): fixed
	faulty peephole optimisation that can cause crashes [Bug 1331475]

2005-10-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Added optimization for I32L64 systems to
	avoid using bignums to perform int multiplies.  The improvement
	shows up most dramatically in tclbench's matrix.bench.

2005-10-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Restored some optimizations of the
	INST_INCR_SCALAR1_IMM opcode.

2005-10-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclIO.c (Tcl_ClearChannelHandlers): removed change dated
	2005-10-04 (see below).  Look into Bug# 1323992 for detailed
	discussion.

	* generic/tcl.h: Fixed bad definition of CRTEXPORT which should
	have been CRTIMPORT rather. This broke compilation of
	generic/tclMain.c and was probably introduced by mistage while
	applying the fix for the Tcl Bug# 1256937 below.

2005-10-14  Kevin Kenny  <kennykb@acm.org>

	* generic/tclExecute.c (TclIncrObj, TclExecuteByteCode):
	Tidied up a couple of infelicitous do {...} while(0) constructs.

2005-10-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tcl.h:     Fix for bug #1256937 - correctly decorate